@@ -1,3 +1,9 @@
+2009-06-19  Samuel Bronson  <naesten@gmail.com>
+
+	PR cli/9930:
+	* cli/cli-decode.c (apropos_cmd): Fix avoidance of double
+	printing.
+
 2009-06-19  Jerome Guitton  <guitton@adacore.com>
 
 	* breakpoint.c (expand_line_sal_maybe): When explicit_line,
